Fix white space in caption

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -854,6 +854,7 @@ img.emoji {
   user-select: text;
   outline: none;
   cursor: text;
+  white-space: pre-wrap;
 }
 
 [contenteditable][data-placeholder] {
